--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,5 +3,11 @@
 }
 
 .navbar-nav a {
-    color: pink;
+    color: white;
+}
+
+.bg-img img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
